car model can be configured via display settings

--- a/TrackEditor/DisplaySettings.ui
+++ b/TrackEditor/DisplaySettings.ui
@@ -7,41 +7,27 @@
     <x>0</x>
     <y>0</y>
     <width>234</width>
-    <height>373</height>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="10" column="1">
-    <widget class="QCheckBox" name="ckRWallSurface">
+   <item row="4" column="0">
+    <widget class="QLabel" name="lblAll">
      <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="1">
-    <widget class="QCheckBox" name="ckLUOWallSurface">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="lblLLane">
-     <property name="text">
-      <string>Left Lane</string>
+      <string>All</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
-   <item row="14" column="0">
-    <widget class="QLabel" name="lblRUOWall">
+   <item row="20" column="0">
+    <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>R Upper Outer Wall</string>
+      <string>Position</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -50,13 +36,6 @@
    </item>
    <item row="16" column="2">
     <widget class="QCheckBox" name="ckOWallFloorWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="1">
-    <widget class="QCheckBox" name="ckRoofSurface">
      <property name="text">
       <string/>
      </property>
@@ -72,20 +51,65 @@
      </property>
     </widget>
    </item>
-   <item row="13" column="2">
-    <widget class="QCheckBox" name="ckLLOWallWireframe">
+   <item row="3" column="1">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Surface</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2">
+    <widget class="QCheckBox" name="ckRLaneWireframe">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="12" column="0">
-    <widget class="QLabel" name="lblLUOWall">
+   <item row="9" column="2">
+    <widget class="QCheckBox" name="ckLWallWireframe">
      <property name="text">
-      <string>L Upper Outer Wall</string>
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QCheckBox" name="ckRShoulderSurface">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Wireframe</string>
+     </property>
+    </widget>
+   </item>
+   <item row="20" column="1" colspan="3">
+    <widget class="QComboBox" name="cbTestCarPos"/>
+   </item>
+   <item row="15" column="1">
+    <widget class="QCheckBox" name="ckRLOWallSurface">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="lblLLane">
+     <property name="text">
+      <string>Left Lane</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QCheckBox" name="ckHighlightSelection">
+     <property name="text">
+      <string>Highlight Selected Chunks</string>
      </property>
     </widget>
    </item>
@@ -99,8 +123,39 @@
      </property>
     </widget>
    </item>
-   <item row="17" column="1">
-    <widget class="QCheckBox" name="ckEnvirFloorSurface">
+   <item row="4" column="2">
+    <widget class="QCheckBox" name="ckAllWireframe">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="18" column="0" colspan="4">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="0">
+    <widget class="QLabel" name="lblLUOWall">
+     <property name="text">
+      <string>L Upper Outer Wall</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QCheckBox" name="ckAILines">
+     <property name="text">
+      <string>AI Lines</string>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="1">
+    <widget class="QCheckBox" name="ckLUOWallSurface">
      <property name="text">
       <string/>
      </property>
@@ -113,81 +168,6 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="2">
-    <widget class="QCheckBox" name="ckRLaneWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="1">
-    <widget class="QCheckBox" name="ckLShoulderSurface">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="2">
-    <widget class="QCheckBox" name="ckLUOWallWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="0">
-    <widget class="QLabel" name="lblLWall">
-     <property name="text">
-      <string>Left Wall</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Surface</string>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="2">
-    <widget class="QCheckBox" name="ckRShoulderWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="0">
-    <widget class="QLabel" name="lblRoof">
-     <property name="text">
-      <string>Roof</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="3">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="4" column="1">
     <widget class="QCheckBox" name="ckAllSurface">
      <property name="text">
@@ -195,42 +175,15 @@
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
-    <widget class="QCheckBox" name="ckLLOWallSurface">
+   <item row="11" column="1">
+    <widget class="QCheckBox" name="ckRoofSurface">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
-    <widget class="QCheckBox" name="ckRLaneSurface">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="18" column="2">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="2">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Wireframe</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="2">
-    <widget class="QCheckBox" name="ckLWallWireframe">
+   <item row="10" column="1">
+    <widget class="QCheckBox" name="ckRWallSurface">
      <property name="text">
       <string/>
      </property>
@@ -252,29 +205,66 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="lblRLane">
+   <item row="11" column="2">
+    <widget class="QCheckBox" name="ckRoofWireframe">
      <property name="text">
-      <string>Right Lane</string>
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QCheckBox" name="ckLShoulderSurface">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QLabel" name="lblLShoulder">
+     <property name="text">
+      <string>Left Shoulder</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
-   <item row="14" column="1">
-    <widget class="QCheckBox" name="ckRUOWallSurface">
+   <item row="11" column="0">
+    <widget class="QLabel" name="lblRoof">
+     <property name="text">
+      <string>Roof</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QCheckBox" name="ckRLaneSurface">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
-    <widget class="QCheckBox" name="ckRShoulderSurface">
+   <item row="8" column="2">
+    <widget class="QCheckBox" name="ckRShoulderWireframe">
      <property name="text">
       <string/>
      </property>
     </widget>
+   </item>
+   <item row="3" column="3">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="13" column="0">
     <widget class="QLabel" name="lblLLOWall">
@@ -293,27 +283,20 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
-    <widget class="QCheckBox" name="ckLWallSurface">
+   <item row="14" column="1">
+    <widget class="QCheckBox" name="ckRUOWallSurface">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="10" column="2">
-    <widget class="QCheckBox" name="ckRWallWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
+   <item row="19" column="1" colspan="3">
+    <widget class="QComboBox" name="cbTestCarType"/>
    </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="lblAll">
+   <item row="19" column="0">
+    <widget class="QCheckBox" name="ckTestCar">
      <property name="text">
-      <string>All</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      <string>Test Car</string>
      </property>
     </widget>
    </item>
@@ -327,39 +310,15 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="2">
-    <widget class="QCheckBox" name="ckAllWireframe">
+   <item row="5" column="1">
+    <widget class="QCheckBox" name="ckLLaneSurface">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="11" column="2">
-    <widget class="QCheckBox" name="ckRoofWireframe">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="15" column="1">
-    <widget class="QCheckBox" name="ckRLOWallSurface">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="16" column="0">
-    <widget class="QLabel" name="lblOWallFloor">
-     <property name="text">
-      <string>Outer Wall Floor</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="17" column="2">
-    <widget class="QCheckBox" name="ckEnvirFloorWireframe">
+   <item row="12" column="2">
+    <widget class="QCheckBox" name="ckLUOWallWireframe">
      <property name="text">
       <string/>
      </property>
@@ -375,24 +334,17 @@
      </property>
     </widget>
    </item>
-   <item row="16" column="1">
-    <widget class="QCheckBox" name="ckOWallFloorSurface">
+   <item row="10" column="2">
+    <widget class="QCheckBox" name="ckRWallWireframe">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="15" column="2">
-    <widget class="QCheckBox" name="ckRLOWallWireframe">
+   <item row="6" column="0">
+    <widget class="QLabel" name="lblRLane">
      <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="lblLShoulder">
-     <property name="text">
-      <string>Left Shoulder</string>
+      <string>Right Lane</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -406,24 +358,109 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QCheckBox" name="ckLLaneSurface">
+   <item row="22" column="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="9" column="0">
+    <widget class="QLabel" name="lblLWall">
+     <property name="text">
+      <string>Left Wall</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="1">
+    <widget class="QCheckBox" name="ckOWallFloorSurface">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QCheckBox" name="ckHighlightSelection">
+   <item row="13" column="1">
+    <widget class="QCheckBox" name="ckLLOWallSurface">
      <property name="text">
-      <string>Highlight Selected Chunks</string>
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QCheckBox" name="ckAILines">
+   <item row="15" column="2">
+    <widget class="QCheckBox" name="ckRLOWallWireframe">
      <property name="text">
-      <string>AI Lines</string>
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="1">
+    <widget class="QCheckBox" name="ckEnvirFloorSurface">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="4">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="2">
+    <widget class="QCheckBox" name="ckLLOWallWireframe">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="2">
+    <widget class="QCheckBox" name="ckEnvirFloorWireframe">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="lblOWallFloor">
+     <property name="text">
+      <string>Outer Wall Floor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="1">
+    <widget class="QCheckBox" name="ckLWallSurface">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="0">
+    <widget class="QLabel" name="lblRUOWall">
+     <property name="text">
+      <string>R Upper Outer Wall</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="21" column="1" colspan="2">
+    <widget class="QCheckBox" name="ckMillionPlus">
+     <property name="text">
+      <string>Million Plus</string>
      </property>
     </widget>
    </item>
